--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,10 +35,20 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/gestorRestaurante
 endorsed.classpath=
 excludes=
+file.reference.commons-lang3-3.8.1.jar=jars\\commons-lang3-3.8.1.jar
+file.reference.commons-logging-1.2.jar=jars\\commons-logging-1.2.jar
+file.reference.hsqldb-2.5.0.jar=jars\\hsqldb-2.5.0.jar
+file.reference.jackcess-3.0.1.jar=jars\\jackcess-3.0.1.jar
+file.reference.ucanaccess-5.0.1.jar=jars\\ucanaccess-5.0.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.ucanaccess-5.0.1.jar}:\
+    ${file.reference.commons-lang3-3.8.1.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.hsqldb-2.5.0.jar}:\
+    ${file.reference.jackcess-3.0.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
