--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -84,11 +84,11 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=gestorRestaurante
-main.class=
+main.class=interfaces.VtnLogin
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_23
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
